snapshots/syntax/library/statements/seek/seek_random_access.snap
---
source: src/syntax/library/statements/file_operations/seek.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SeekStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SeekKeyword
                  text: Seek
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: IntegerLiteral
                  text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: recordNumber
                - kind: Newline
                  text: "\n"
            - kind: GetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: GetKeyword
                  text: Get
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: IntegerLiteral
                  text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: myRecord
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
